# phenotype-journeys

./: .env.example  .gitignore  .pre-commit-config.yaml  .trufflehog.yml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SOTA.md  SPEC.md  SSOT.md  SUPPORT.md  Taskfile.yml  _typos.toml  audit_scorecard.json  charter.md  deny.toml  intent.md  justfile  llms.txt  review.md  rust-toolchain.toml  rustfmt.toml  sonar-project.properties  tarpaulin.toml  worklog.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: config.yml
.github/scripts/: quality-gate.sh
.github/workflows/: [01;31m[Kci.yml[m[K  audit.yml  cargo-audit.yml  cargo-deny.yml  cargo-machete.yml  cargo-semver-checks.yml  ci.yml  codeql-rust.yml  codeql.yml  coverage.yml  deny.yml  doc-links.yml  fr-coverage.yml  journey-gate.yml  observability-smoke.yml  publish-npm.yml  quality-gate.yml  scorecard.yml  secrets-scan.yml  sonarcloud.yml  trufflehog.yml  vitepress-deploy.yml
.kittify/: AGENTS.md  config.yaml
.kittify/memory/: constitution.md
crates/klipdot-capture/: Cargo.toml  klipdot-capture.cdx.json
crates/klipdot-capture/src/: clipboard.rs  config.rs  error.rs  image_preview.rs  image_processor.rs  installer.rs  interceptor.rs  lib.rs  service.rs  shell_hooks.rs  stdout_monitor.rs  util.rs
crates/phenotype-journey-core/: Cargo.toml  phenotype-journey-core.cdx.json
crates/phenotype-journey-core/schema/: user-story.schema.json
crates/phenotype-journey-core/src/: agreement.rs  assertions.rs  lib.rs  pipeline.rs  vision.rs
crates/phenotype-journey-core/src/verify/: mod.rs
crates/phenotype-journey-core/tests/: regression_traceability.rs  verify_cli_subcommand.rs
crates/phenotype-journey-core/tests/fixtures/: traceability-report-broken-ocr.txt
crates/phenotype-journeys-observability/: Cargo.toml
crates/phenotype-journeys-observability/src/: lib.rs
data/: shot-annotations.yaml
docs/: FUNCTIONAL_REQUIREMENTS.md  index.md  journey-traceability.md  observability.md
docs/boundary/: phenotype-journeys.md
docs/guides/: cutting-a-release.md
docs/intent/: README.md  assumptions.md  phenotype-journeys.md  synthesis.md
docs/journeys/manifests/: authn-authz-least-privilege.journey.yaml  manifest-schema-validation.journey.yaml  phenotype-journey-cli-commands.journey.yaml
docs/operations/: journey-traceability.md
docs/research/: mined-klipdot-vhs-patterns.md
docs/sessions/20260430-sladge-badge-rollout/: 00_SESSION_OVERVIEW.md  01_RESEARCH.md  02_SPECIFICATIONS.md  03_DAG_WBS.md  04_IMPLEMENTATION_STRATEGY.md  05_KNOWN_ISSUES.md  06_TESTING_STRATEGY.md
docs/sessions/20260506-phenotype-journeys-sladge-refresh/: 00_SESSION_OVERVIEW.md  01_RESEARCH.md  02_SPECIFICATIONS.md  03_DAG_WBS.md  04_IMPLEMENTATION_STRATEGY.md  05_KNOWN_ISSUES.md  06_TESTING_STRATEGY.md
docs/sessions/20260507-phenotype-journeys-sladge-current-refresh/: 00_SESSION_OVERVIEW.md  01_RESEARCH.md  02_SPECIFICATIONS.md  04_IMPLEMENTATION_STRATEGY.md  05_KNOWN_ISSUES.md  06_TESTING_STRATEGY.md
docs/sota/: technical.md
docs/specs/: per-os-icons.md
engines/asset/: README.md
engines/asset/blender/: glass_icon.py  hero.py
imports/no-remote/phenotype-journeys-audit/worktree/: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  README.md  cliff.toml  worklog.md
imports/no-remote/phenotype-journeys-audit/worktree/.github/: CODEOWNERS
imports/no-remote/phenotype-journeys-audit/worktree/.github/scripts/: quality-gate.sh
imports/no-remote/phenotype-journeys-audit/worktree/crates/klipdot-capture/src/: clipboard.rs  config.rs  error.rs  image_preview.rs  image_processor.rs  installer.rs  interceptor.rs  service.rs  shell_hooks.rs  stdout_monitor.rs  util.rs
imports/no-remote/phenotype-journeys-audit/worktree/crates/phenotype-journey-core/src/: agreement.rs  lib.rs  (+3 more)
imports/no-remote/phenotype-journeys-audit/worktree/data/: shot-annotations.yaml
imports/no-remote/phenotype-journeys-audit/worktree/docs/operations/: journey-traceability.md
imports/no-remote/phenotype-journeys-audit/worktree/docs/research/: mined-klipdot-vhs-patterns.md
imports/no-remote/phenotype-journeys-audit/worktree/docs/specs/: per-os-icons.md
imports/no-remote/phenotype-journeys-audit/worktree/npm/: PUBLISHING.md
imports/no-remote/phenotype-journeys-audit/worktree/npm/journey-viewer/: CHANGELOG.md  README.md  phenotype-journey-viewer-0.1.0.tgz  phenotype-journey-viewer-0.1.1.tgz  phenotype-journey-viewer-0.1.2.tgz  phenotype-journey-viewer-0.1.3.tgz
imports/no-remote/phenotype-journeys-audit/worktree/npm/playwright-record/: README.md  tsconfig.json
imports/no-remote/phenotype-journeys-audit/worktree/remotion/borrowed/: PROVENANCE.md
imports/no-remote/phenotype-journeys-audit/worktree/remotion/doc-embeds/: README.md  package.json
imports/no-remote/phenotype-journeys-audit/worktree/schema/: manifest.schema.json
npm/: PUBLISHING.md  publish.mjs
npm/journey-playwright/: README.md  package.json
npm/journey-playwright/src/: index.ts
npm/journey-viewer/: CHANGELOG.md  README.md  package.json  phenotype-journey-viewer-0.1.0.tgz  phenotype-journey-viewer-0.1.1.tgz  phenotype-journey-viewer-0.1.2.tgz  phenotype-journey-viewer-0.1.3.tgz
npm/journey-viewer/src/: JourneyViewer.vue  JudgeScore.vue  KeyframeGallery.vue  KeyframeLightbox.vue  RecordingEmbed.vue  Shot.vue  ShotGallery.vue  StructuralPane.vue  index.ts  types.ts
npm/playwright-record/: README.md  package-lock.json  package.json
npm/playwright-record/src/: index.ts  recorder.ts
npm/playwright-record/tests/: recorder.test.ts
npm/playwright-record/tests/fixtures/: static.html
okf/: manifest.okf.yaml
remotion/borrowed/: PROVENANCE.md
remotion/doc-embeds/: README.md  package.json  remotion.config.ts
remotion/doc-embeds/examples/journey-walkthrough/: annotations.json
remotion/doc-embeds/src/: DocEmbed.tsx  schema.ts
remotion/doc-embeds/src/components/: Callout.tsx  Highlight.tsx  SceneView.tsx
schema/: manifest.schema.json
scripts/: check-schema-regression.sh
(+20 files in other folders)
