[workspace]
resolver = "2"
members = ["crates/phenotype-journey-core", "bin/phenotype-journey"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/KooshaPari/phenotype-journeys"
authors = ["Phenotype Org"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
jsonschema = "0.18"
schemars = "1.2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_yaml = "0.9"
