[package]
name = "klipdot-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "KlipDot daemon: terminal image interceptor and clipboard processor"

[dependencies]
tokio = { version = "1.52", features = ["full", "process"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "6.0"
notify = "6.0"
image = "0.25"
crossterm = "0.27"
once_cell = "1.19"
base64 = "0.22"
hex = "0.4"
regex = "1.10"
libc = "0.2"
which = "8.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11-clipboard = "0.9"
wl-clipboard-rs = "0.8"
wayland-client = "0.31"

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "5.4"

[dev-dependencies]
tempfile = "3.0"
