[package]
name = "phenotype-journey-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types and verification logic for Phenotype journey manifests"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
schemars = { workspace = true }
jsonschema = { workspace = true }
reqwest = { workspace = true, optional = true }

[features]
default = []
live = ["reqwest"]

[dev-dependencies]
serde_json = { workspace = true }
