[package]
name = "phenotype-journey-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types and verification logic for Phenotype journey manifests"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
schemars = { workspace = true }
jsonschema = { workspace = true }
regex = "1"
reqwest = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", optional = true }
objc2-foundation = { version = "0.3", optional = true, features = [
    "NSArray",
    "NSDictionary",
    "NSError",
    "NSObject",
    "NSString",
    "NSURL",
] }
objc2-vision = { version = "0.3", optional = true, features = [
    "VNRequest",
    "VNRequestHandler",
    "VNRecognizeTextRequest",
    "VNObservation",
] }

[features]
default = []
live = ["reqwest"]
# Apple Vision OCR backend (macOS only). Activated at runtime with
# PHENOTYPE_JOURNEY_OCR_BACKEND=vision.
vision = ["dep:objc2", "dep:objc2-foundation", "dep:objc2-vision"]

[dev-dependencies]
serde_json = { workspace = true }
