[package]
name = "phenotype-journeys-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OTel/OTLP observability for the phenotype-journeys workspace"

[dependencies]
# Standard tracing facade + OTLP exporter (no external git dep required)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
opentelemetry = { version = "0.27", features = ["trace"] }
# Keep in lockstep with opentelemetry / otlp / tracing-opentelemetry 0.27.x.
# Partial bump to 0.32 (#121) breaks the build (SdkTracerProvider / KeyValue
# mismatch). Coordinated 0.32 stack is T1 (Dependabot #128/#126/#125/#123).
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.32", features = ["http-proto", "reqwest-client"] }
opentelemetry-semantic-conventions = "0.27"
tracing-opentelemetry = "0.28"
thiserror.workspace = true

[lib]
path = "src/lib.rs"
